Fixed line breaks in chat messages

--- a/website/public/css/style.css
+++ b/website/public/css/style.css
@@ -165,6 +165,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: bold;
 }
 
+#editor #chat .message .content {
+	white-space: pre;
+}
+
 #editor #chat .footer textarea {
 	width: 100%;
 	resize: vertical;
